# herdr-gui

./: .gitignore  AGENTS.md  Cargo.toml  README.md  TODO.md  build.rs  crepus.toml  test.sh
.github/workflows/: checks.yml  release.yml
crates/herdr-gui/: Cargo.toml
crates/herdr-gui/src/: acp.rs  agent_panel.rs  ghostty.rs  help.rs  herdr.rs  input.rs  main.rs  settings.rs  terminal_view.rs  theme.rs
ui/: agent_header.crepus  arc_sidebar.crepus  empty_state.crepus  main.crepus  resize_handle.crepus  swipe_hint.crepus  tab_header.crepus  terminal_area.crepus  ui.crepus  warp_sidebar.crepus  widgets.crepus
