[package]
name = "herdr-gui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "herdr-gui"
path = "crates/herdr-gui/src/main.rs"

[workspace]
members = []
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[dependencies]
crepuscularity-gpui = { path = "/Users/undivisible/projects/crepuscularity/crates/crepuscularity-gpui", features = ["macos"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[lints]
workspace = true
