[package]
name = "herdr-gui"
version = "0.1.6"
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "herdr-gui"
path = "crates/herdr-gui/src/main.rs"

[workspace]
members = []
resolver = "2"

[workspace.package]
edition = "2021"
license = "MPL-2.0"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[dependencies]
crepuscularity-gpui = { version = "=0.5.5", features = ["macos", "symbols"] }
gpui = "=0.2.2"
libc = "0.2"
portable-pty = "0.9.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
agent-client-protocol = "1.2.0"
tokio = { version = "1", features = ["rt-multi-thread"] }
thiserror = "2"

[patch.crates-io]
crepuscularity-gpui = { path = "../crepuscularity/crates/crepuscularity-gpui" }
crepuscularity-core = { path = "../crepuscularity/crates/crepuscularity-core" }
crepuscularity-runtime = { path = "../crepuscularity/crates/crepuscularity-runtime" }

[lints]
workspace = true
