[package]
name = "herdr-gui"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
crepuscularity-gpui = { path = "/Users/undivisible/projects/crepuscularity/crates/crepuscularity-gpui", features = ["macos"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[lints]
workspace = true
